--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,3 +52,9 @@
 *::-webkit-scrollbar-thumb:hover {
     background-color: #2563eb;
 }
+.mostleft{
+    background: conic-gradient(rgb(25, 25, 255), rgb(0, 183, 255), rgb(255, 255, 255), blue);
+}
+/* .mostleftr{
+    background: conic-gradient(blue, rgb(255, 255, 255), rgb(0, 183, 255), rgb(25, 25, 255));
+} */
